[tool.poetry]
name = "dw-brl-meat-prices"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
configparser = "^7.0.0"
taskipy = "^1.12.2"
black = "^24.4.1"
isort = "^5.13.2"
boto3 = "^1.34.91"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."

